--- a/package.json
+++ b/package.json
@@ -40,5 +40,9 @@
 		"typescript": "^5.9.3",
 		"typescript-eslint": "^8.53.1",
 		"vite": "^7.3.1"
+	},
+	"dependencies": {
+		"nanoid": "^5.1.6",
+		"oslo": "^1.2.1"
 	}
 }
